# pipeline-whisperer

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  DEMO_CHEAT_SHEET.md  HACKATHON.md  HACKATHON_DEMO_GUIDE.md  IDEAS.md  PLAN.md  README.md  SETUP.md  docker-compose.production.yml  package.json
.claude/: CLAUDE.md
.claude/agent/: fix-pr.md
.github/workflows/: ci.yml  deploy.yml
apps/agent-api/: .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
apps/agent-api/alembic/: env.py
apps/agent-api/alembic/versions/: 482684b1d498_initial_schema_leads_and_experiments.py  ac6127a7995f_add_outreach_templates_and_logs.py
apps/agent-api/app/: __init__.py  exceptions.py
apps/agent-api/app/config/: settings.py
apps/agent-api/app/middleware/: __init__.py  error_handler.py  rate_limiter.py  security.py
apps/agent-api/app/models/: __init__.py  base.py  experiment.py  lead.py  outreach_log.py  outreach_template.py
apps/agent-api/app/routes/: __init__.py  dashboard.py  experiments.py  health.py  leads.py
apps/agent-api/app/services/: __init__.py  cache.py  kafka_producer.py  lightfield_client.py  openai_scoring_client.py  stackai_client.py  truefoundry_client.py
apps/agent-api/app/utils/: __init__.py  logger.py  retry.py
apps/agent-api/tests/: __init__.py  conftest.py  test_exceptions.py  test_health.py
apps/web/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts
apps/web/app/: layout.tsx  page.tsx
docker/: docker-compose.yaml
docs/: PHASE1_TEST_PLAN.md  PHASE6_PRODUCTION_READY.md  PRODUCTION_DEPLOYMENT.md  STACKAI_INTEGRATION_COMPLETE.md  THOMPSON_SAMPLING_EXPLAINED.md  integration-notes.md  phase-0-complete.md  phase-1-testing.md  phase4-test-results.md  real-api-integration-plan.md  stackai-lead-scoring-prompt.txt  stackai-workflow-setup-guide.md  uv-migration.md
scripts/: backup_database.sh  check_env.py  demo.sh  ingest_demo_leads.py  restore_database.sh  seed_experiments.py  setup-dev.sh  simulate_conversions.py  start-demo.sh  start-infra.sh  stop-demo.sh  test-dashboard.sh  test-phase1-standalone.sh  test-phase2-standalone.sh  test-phase3-standalone.sh  test-stackai-integration.sh
services/simulators/: lightfield_simulator.py
services/workers/: feedback_loop_worker.py  lead_scorer_worker.py  outreach_orchestrator_worker.py
