[project]
name = "pipeline-whisperer-agent"
version = "0.2.0"
description = "Production-ready autonomous GTM agent API powered by FastAPI"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.29",
    "psycopg[binary]>=3.1.18",
    "alembic>=1.13.0",
    "confluent-kafka>=2.3.0",
    "httpx>=0.27.0",
    "sentry-sdk>=1.40.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "faker>=24.0.0",
    # Production features
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
